--- a/AgileStructure/AgileStructure.csproj
+++ b/AgileStructure/AgileStructure.csproj
@@ -72,6 +72,7 @@
     <Compile Include="AlignedRead.cs" />
     <Compile Include="BreakPointData.cs" />
     <Compile Include="ChromosomalPoint.cs" />
+    <Compile Include="deletionSorter.cs" />
     <Compile Include="Exon.cs" />
     <Compile Include="FileString.cs" />
     <Compile Include="FilterHits.cs">
@@ -103,6 +104,7 @@
     <Compile Include="Info.Designer.cs">
       <DependentUpon>Info.cs</DependentUpon>
     </Compile>
+    <Compile Include="insertSorter.cs" />
     <Compile Include="IntervalPoints.cs" />
     <Compile Include="IntervalPointsBinarySearcher.cs" />
     <Compile Include="IntervalPointsSorter.cs" />
